--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
           <h1 id="project_title">cvronmin.GitHub.io</h1>
           <h2 id="project_tagline"></h2>
-
+            <section id="links">
+              <a class="lanfasy" href="http://cvronmin.github.io/lanfasy"></a>
+            </section>
         </header>
     </div>
 
