--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
           <h1 id="project_title">cvronmin.GitHub.io</h1>
           <h2 id="project_tagline"></h2>
-            <section id="links">
-              <a class="lanfasy" href="http://cvronmin.github.io/lanfasy"></a>
+            <section id="links" name="links">
+            <a id="normal_banner" href="index.html">主頁Main Page</a>
+            <a id="normal_banner" href="mtmcl/main.html">MTMCL</a>
+            <a id="normal_banner" href="links/main.html">友情連結Links</a>
             </section>
         </header>
     </div>
@@ -29,6 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+      <h3>其實我都不知道主頁該寫甚麼好.......<br>Actually I don't know what I have to write here...</h3>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
