fixed wrong links

--- a/links/main.html
+++ b/links/main.html
@@ -32,6 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
       <h3>友情連結 Link</h3>
+      連結不分先後 Links not in order<br>
       <a href="http://blog.kaaass.net/">KAAAsS的博客 KAAAsS's blog</a><br>
       <a href="http://www.windworkshop.cn/">風之工房——當風過時的博客 Wind Workshop</a><br>
       <a href="http://frostmiku.fcteam.net/">FrostMiKu的隱蔽空間 FrostMiku's blog</a><br>
