--- a/mtmcl/main.html
+++ b/mtmcl/main.html
@@ -17,9 +17,9 @@
           <h1 id="project_title">MTMCL</h1>
           <h2 id="project_tagline">Minecraft啟動器新體驗<br/>New experience for Minecraft launcher</h2>
           <section id="links" name="links">
-            <a id="normal_banner" href="index.html">主頁Main Page</a>
-            <a id="normal_banner" href="mtmcl/main.html">MTMCL</a>
-            <a id="normal_banner" href="links/main.html">友情連結Links</a>
+            <a id="normal_banner" href="../index.html">主頁Main Page</a>
+            <a id="normal_banner" href="main.html">MTMCL</a>
+            <a id="normal_banner" href="../links/main.html">友情連結Links</a>
             </section>
         </header>
 </div>
