--- a/links.html
+++ b/links.html
@@ -6,167 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="cvronmin.GitHub.io : ">
 
-      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>cvrunmin's OpenSpace - Links</title>
+    <title>cvronmin.GitHub.io - Links</title>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-light position-sticky" style="background-color: #25885c;">
-        <span class="navbar-brand mb-0 h1">cvrunmin's OpenSpace</span>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pieces</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/mtmcl/main.html">MTMCL</a>
-                        <a class="dropdown-item" href="#">Minecraft Mods</a>
-                        <a class="dropdown-item" href="#">UTAUloid</a>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Links</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/cvronmin">View on GitHub</a>
+
+          <h1 id="project_title">cvronmin.GitHub.io</h1>
+          <h2 id="project_tagline"></h2>
+            <section id="links" name="links">
+            <a id="normal_banner" href="index.html">主頁Main Page</a>
+            <a id="normal_banner" href="mtmcl/main.html">MTMCL</a>
+            <a id="normal_banner" href="links.html">友情連結Links</a>
+            <a id="normal_banner" href="contact.html">聯絡Contact</a>
+            </section>
+        </header>
+    </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
       <h3>友情連結 Link</h3>
       連結不分先後 Links not in order<br>
-          <div class="card-columns">
-              <div class="card">
-                  <img class="card-img-top" src="image/kaaass.PNG">
-                  <div class="card-body">
-                      <h4 class="card-title">KAAAsS的博客 KAAAsS's blog</h4>
-                      <a href="http://blog.kaaass.net/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="image/dfgs.PNG">
-                  <div class="card-body">
-                      <h4 class="card-title">風之工房——當風過時的博客 Wind Workshop</h4>
-                      <a href="http://www.windworkshop.cn/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">FrostMiKu的隱蔽空間 FrostMiku's blog</h4>
-                      <a href="http://frostmiku.fcteam.net/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">InlCraft.tk</h4>
-                      <a href="https://inlcraft.tk/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="image/darkyoooooo.PNG">
-                  <div class="card-body">
-                      <h4 class="card-title">Darkyoooooo的博客 Darkyoooooo's blog</h4>
-                      <a href="https://darky.to2mbn.org/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="image/tt702.PNG">
-                  <div class="card-body">
-                      <h4 class="card-title">TT菌的部落格 TT's blog</h4>
-                      <a href="http://blog.tt702.moe/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">叁只番茄的博客</h4>
-                      <a href="http://www.rousn.tk/wordpress/" class="card-link">Go</a>
-                  </div>
-              </div>
-
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">kuludu的博客 kuludu's blog</h4>
-                      <a href="https://www.kuludu.net/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">Srar的博客 Srar's blog</h4>
-                      <a href="https://blog.x-speed.cc/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">bangbang93的博客 bangbang93's blog</h4>
-                      <a href="https://blog.bangbang93.com/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">宅魂Kill的博客 ZhaiSoul's blog</h4>
-                      <a href="http://www.zhaisoul.com/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">繁華的博客 FanHua's blog</h4>
-                      <a href="http://fanhua.me/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">白玉樓之夢—szszss的博客 szszss's blog</h4>
-                      <a href="http://blog.hakugyokurou.net/" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card">
-                  <img class="card-img-top" src="...">
-                  <div class="card-body">
-                      <h4 class="card-title">www.mc4craft.net</h4>
-                      <a href="www.mc4craft.net" class="card-link">Go</a>
-                  </div>
-              </div>
-              <div class="card disabled">
-              <img class="card-img-top" src="image/mcdevwiki.png">
-              <div class="card-body">
-                  <h4 class="card-title">MCDev Wiki</h4>
-                  <!--<a href="http://www.mcdev-wiki.org/" class="card-link">Go</a>-->
-              </div>
-          </div>
-          </div>
+      <a href="http://blog.kaaass.net/">KAAAsS的博客 KAAAsS's blog</a><br>
+      <a href="http://www.windworkshop.cn/">風之工房——當風過時的博客 Wind Workshop</a><br>
+      <a href="http://frostmiku.fcteam.net/">FrostMiKu的隱蔽空間 FrostMiku's blog</a><br>
+      <a href="https://inlcraft.tk/">InlCraft.tk</a><br>
+      <a href="https://darky.to2mbn.org/">Darkyoooooo的博客 Darkyoooooo's blog</a><br>
+      <a href="http://blog.tt702.moe/">TT菌的部落格 TT's blog</a><br>
+      <a href="http://www.rousn.tk/wordpress/">叁只番茄的博客</a><br>
+      <a href="http://www.mcdev-wiki.org/">MCDev Wiki</a><br>
+      <a href="https://www.kuludu.net/">kuludu的博客 kuludu's blog</a><br>
+      <a href="https://blog.x-speed.cc/">Srar的博客 Srar's blog</a><br>
+      <a href="https://blog.bangbang93.com/">bangbang93的博客 bangbang93's blog</a><br>
+      <a href="http://www.zhaisoul.com/">宅魂Kill的博客 ZhaiSoul's blog</a><br>
+      <a href="http://fanhua.me/">繁華的博客 FanHua's blog</a><br>
+      <a href="http://blog.hakugyokurou.net/">白玉樓之夢—szszss的博客 szszss's blog</a><br>
+      <a href="www.mc4craft.net">www.mc4craft.net</a>
       </section>
     </div>
 
     <!-- FOOTER  -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-2 mx-auto text-center">
-                    <p class="text-muted">Copyright &copy; cvrunmin</p>
-                    <h6 class="text-muted">Powered by Bootstrap</h6>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script src="jquery/jquery-3.2.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="js/scripts.js"></script>
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
   </body>
 </html>
