--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <section id="links" name="links">
             <a id="normal_banner" href="index.html">主頁Main Page</a>
             <a id="normal_banner" href="mtmcl/main.html">MTMCL</a>
-            <a id="normal_banner" href="links/main.html">友情連結Links</a>
+            <a id="normal_banner" href="links.html">友情連結Links</a>
+            <a id="normal_banner" href="contact.html">聯絡Contact</a>
             </section>
         </header>
     </div>
