--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="cvronmin.GitHub.io : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>cvronmin.GitHub.io - Links</title>
   </head>
@@ -21,9 +21,10 @@
           <h1 id="project_title">cvronmin.GitHub.io</h1>
           <h2 id="project_tagline"></h2>
             <section id="links" name="links">
-            <a id="normal_banner" href="../index.html">主頁Main Page</a>
-            <a id="normal_banner" href="../mtmcl/main.html">MTMCL</a>
-            <a id="normal_banner" href="main.html">友情連結Links</a>
+            <a id="normal_banner" href="index.html">主頁Main Page</a>
+            <a id="normal_banner" href="mtmcl/main.html">MTMCL</a>
+            <a id="normal_banner" href="links.html">友情連結Links</a>
+            <a id="normal_banner" href="contact.html">聯絡Contact</a>
             </section>
         </header>
     </div>
@@ -46,7 +47,8 @@
       <a href="https://blog.bangbang93.com/">bangbang93的博客 bangbang93's blog</a><br>
       <a href="http://www.zhaisoul.com/">宅魂Kill的博客 ZhaiSoul's blog</a><br>
       <a href="http://fanhua.me/">繁華的博客 FanHua's blog</a><br>
-      <a href="http://blog.hakugyokurou.net/">白玉樓之夢—szszss的博客 szszss's blog</a>
+      <a href="http://blog.hakugyokurou.net/">白玉樓之夢—szszss的博客 szszss's blog</a><br>
+      <a href="www.mc4craft.net">www.mc4craft.net</a>
       </section>
     </div>
 
