--- a/mtmcl/main.html
+++ b/mtmcl/main.html
@@ -89,8 +89,8 @@
 }</code></pre>
 <h3>下載 Download</h3>
 <a href="https://github.com/cvronmin/metocraft/releases/latest">最新發布 Latest Release</a><br>
-<a href="https://github.com/cvronmin/metocraft/releases/download/MTMCL---v1.0.0.57/MTMCL.exe">從GitHub下載 Download from GitHub</a><br>
-<a href="http://pan.baidu.com/s/1skb2zbJ">從百度雲下載 Download From Baidu Yun</a><br>
+<a href="https://github.com/cvronmin/metocraft/releases/download/MTMCL---v1.0.0.58/MTMCL.exe">從GitHub下載 Download from GitHub</a><br>
+<a href="http://pan.baidu.com/s/1nu2FoKx">從百度雲下載 Download From Baidu Yun</a><br>
 另：源代碼可在GitHub查看<br>PS: Sources code can be view at GitHub
 <p><h3>鳴謝 Thanks</h3><br>
 感謝bangbang93提供BMCLV3代碼。Thank bangbang93 for the sources code of BMCLV3<br>
