--- a/mtmcl/main.html
+++ b/mtmcl/main.html
@@ -22,6 +22,10 @@
             <a id="normal_banner" href="../links.html">友情連結Links</a>
             <a id="normal_banner" href="../contact.html">聯絡Contact</a>
             </section>
+            <section id="sublinks" name="sublinks">
+            <a href="main.html" id="small_normal_banner">MTMCL主頁 Main Page</a>
+                        <a href="gui.html" id="small_normal_banner">界面 Interface</a>
+            </section>
         </header>
 </div>
 <div id="main_content_wrap" class="outer">
