--- a/railwayp/download.html
+++ b/railwayp/download.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Downloads</h1>
 <h2>StatCraft for Minecraft 1.9</h2>
-<a href="https://drone.io/github.com/cvronmin/railwayp/files/build/libs/railwayp-1.0.jar">1.9_1.0</a>
-<a href="https://drone.io/github.com/cvronmin/railwayp/files/build/libs/railwayp-1.0-sources.jar">1.9_1.0 source</a>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.1-mc1.9/railwayp-1.1-mc1.9.jar">1.1-mc1.9</a>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.1-mc1.9/railwayp-1.1-mc1.9-sources.jar">1.1-mc1.9 source</a>
 </body>
 </html>
