--- a/railwayp/download.html
+++ b/railwayp/download.html
@@ -8,5 +8,8 @@
 <h2>StatCraft for Minecraft 1.9</h2>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.1-mc1.9/railwayp-1.1-mc1.9.jar">1.1-mc1.9</a>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.1-mc1.9/railwayp-1.1-mc1.9-sources.jar">1.1-mc1.9 source</a>
+<h2>StatCraft for Minecraft 1.8.9</h2>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.1-mc1.8.9/railwayp-1.1-mc1.8.9.jar">1.1-mc1.8.9</a>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.1-mc1.8.9/railwayp-1.1-mc1.8.9-sources.jar">1.1-mc1.8.9 source</a>
 </body>
 </html>
