--- a/railwayp/download.html
+++ b/railwayp/download.html
@@ -6,6 +6,9 @@
 <body>
 <h1>Downloads</h1>
 <h2>StatCraft for Minecraft 1.9</h2>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.3/StatCraft-1.3.jar">1.3</a>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.3/StatCraft-1.3-sources.jar">1.3 source</a>
+<br/>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.2/StatCraft-1.2.jar">1.2</a>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.2/StatCraft-1.2-sources.jar">1.2 source</a>
 <br/>
