--- a/railwayp/download.html
+++ b/railwayp/download.html
@@ -15,6 +15,9 @@
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.4+mc1.9.4/StatCraft-1.4.jar">1.4</a>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.4+mc1.9.4/StatCraft-1.4-sources.jar">1.4 source</a>
 <h2>StatCraft for Minecraft 1.9</h2>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.4+mc1.9/StatCraft-1.4.jar">1.4</a>
+<a href="https://github.com/cvronmin/railwayp/releases/download/1.4+mc1.9/StatCraft-1.4-sources.jar">1.4 source</a>
+<br/>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.3/StatCraft-1.3.jar">1.3</a>
 <a href="https://github.com/cvronmin/railwayp/releases/download/1.3/StatCraft-1.3-sources.jar">1.3 source</a>
 <br/>
