update, create utau page

--- a/mtmcl/main.html
+++ b/mtmcl/main.html
@@ -6,41 +6,12 @@
     <meta name="description" content="cvronmin.GitHub.io : MTMCL">
     <meta name="keywords" content="Minecraft Launcher">
     <title>cvrunmin-MTMCL</title>
-
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../bootstrap/css/bootstrap-reboot.min.css">
+    <link href="../bootstrap/css/bootstrap-reboot.min.css" type="text/javascript" rel="script">
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 
 </head>
 <body>
-<div class="container-fluid">
-    <nav class="navbar navbar-expand-md navbar-light fixed-top"
-         style=" background: linear-gradient(rgba(37, 136,92,1) 0%, rgba(37, 136, 92, 1) 85%, rgba(255,255,255,0) 100%)">
-        <span class="navbar-brand mb-0 h1">cvrunmin's OpenSpace</span>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">Pieces</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item active" href="#">MTMCL</a>
-                        <a class="dropdown-item" href="#">Minecraft Mods</a>
-                        <a class="dropdown-item" href="#">UTAUloid</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../links.html">Links</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
 <!--<div id="header_wrap" class="outer">
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/cvronmin">View on GitHub</a>
@@ -60,7 +31,7 @@
         </section>
     </header>
 </div>-->
-<div class="card-deck" style="padding: 5% 5% 0 5%">
+<div class="card-deck" style="padding: 75px 5% 0 5%">
     <div class="card">
         <div class="card-header">
             <nav class="nav nav-tabs card-header-tabs" role="tablist">
@@ -199,20 +170,10 @@
         </div>
     </div>
 </div>
-<!-- FOOTER  -->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-2 mx-auto text-center">
-                <p class="text-muted">Copyright &copy; cvrunmin</p>
-                <h6 class="text-muted">Powered by Bootstrap</h6>
-            </div>
-        </div>
-    </div>
-</footer>
 <script src="../jquery/jquery-3.2.1.min.js"></script>
 <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="../js/scripts.js"></script>
+<script src="../js/headerfooter.js"></script>
 <script>
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
