--- a/links.html
+++ b/links.html
@@ -6,37 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="cvronmin.GitHub.io : ">
 
-      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="css/style.css"/>
+      <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="/css/style.css"/>
 
     <title>cvrunmin's OpenSpace - Links</title>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-light position-sticky" style="background-color: #25885c;">
-        <span class="navbar-brand mb-0 h1">cvrunmin's OpenSpace</span>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pieces</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/mtmcl/main.html">MTMCL</a>
-                        <a class="dropdown-item" href="#">Minecraft Mods</a>
-                        <a class="dropdown-item" href="#">UTAUloid</a>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Links</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
@@ -154,19 +130,9 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-2 mx-auto text-center">
-                    <p class="text-muted">Copyright &copy; cvrunmin</p>
-                    <h6 class="text-muted">Powered by Bootstrap</h6>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <script src="jquery/jquery-3.2.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="js/scripts.js"></script>
+    <script src="/jquery/jquery-3.2.1.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/scripts.js"></script>
+<script src="/js/headerfooter.js"></script>
   </body>
 </html>
