--- a/utau.html
+++ b/utau.html
@@ -14,7 +14,7 @@
         <div class="card-body container-fluid">
             <div class="row">
                 <div class="col-lg">
-
+                        <img src="image/kontonne_lun_1.png" class="img-fluid">
                 </div>
                 <div class="col-lg-6">
                     <p>
@@ -45,39 +45,39 @@
             <h4 class="text-center">Usage Policy</h4>
             <div class="container-fluid border border-warning rounded">
                 <p>
-                    本段所寫的利用規約適用於以下的UTAU音源及其附属角色形象。
+                    本段所写的利用规约适用于以下的UTAU音源及其附属角色形象。
                 <ul>
                     <li>混沌音ルン</li>
                     <li>混沌音联</li>
                 </ul>
                 角色资料等情报请参考本页面首部分。
                 <h4>使用规约正文</h4>
-                此音源的使用規約以UTAU中華組Wiki的<a href="http://vocawiki.net/utau:china:shiyongguiyue">公共規約</a>為基準，內容幾乎與公共規約一致。除了以下項目，其他均與公共規約相同。請作參考：
+                此音源的使用规约以UTAU中华组Wiki的<a href="http://vocawiki.net/utau:china:shiyongguiyue">公共规约</a>為基准，內容几乎與公共规约一致。除了以下项目，其他均与公共规约相同。请作参考：
                 <ol>
-                    <li><h5>是否可以偏离角色设定:</h5><p>最低限度遵守以下設定：髮色、年齡<br>性格設定在嚴重偏離時建議以衍生角色出現</p></li>
-                    <li><h5>是否可以和其他音源组成CP：</h5><p>所有管理人組成的CP組均無須報告，其他則按下列處理：<br>①NL（BG）：无需报告<br>②BL/GL：以音源角色擁有的屬性判定：<br>正太、美少年：無需報告<br>其他：必須事前詢問</p></li>
-                    <li><h5>其他表现内容</h5><p>④是否可以更改角色的年龄：不允許(已於第1項提及)</p></li>
+                    <li><h5>是否可以偏离角色设定:</h5><p>最低限度遵守以下设定：发色、年龄<br>性格设定在严重偏离时建议以衍生角色出现</p></li>
+                    <li><h5>是否可以和其他音源组成CP：</h5><p>所有管理人组成的CP组均无需报告，其他则按下列处理：<br>①NL（BG）：无需报告<br>②BL/GL：以音源角色拥有的属性判定：<br>正太、美少年：无需报告<br>其他：必须事前询问</p></li>
+                    <li><h5>其他表现内容</h5><p>④是否可以更改角色的年龄：不允许(已于第1项提及)</p></li>
                 </ol>
                 </p>
             </div>
         </div>
         <div class="card-body">
-            <h4 class="text-center">Download</h4>
+            <h4 class="text-center">下载</h4>
             <div class="row">
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <span class="text-center card-title">Japanese</span>
+                            <span class="text-center card-title">日本语</span>
                         </div>
                         <div class="card-body">
-                            <h5 class="text-center">Release video</h5>
+                            <h5 class="text-center">配布视频Release video</h5>
                             <div class="embed-responsive-4by3">
                                 <embed class="embed-responsive-item" height="415" width="544" quality="high"
                                        allowfullscreen="true" type="application/x-shockwave-flash"
                                        src="//static.hdslb.com/miniloader.swf" flashvars="aid=16030170&page=1"
                                        pluginspage="//www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
                             </div>
-                            <h5 class="text-center">Download</h5>
+                            <h5 class="text-center">下载</h5>
                             <div class="vertical-center">
                                 <a href="http://www.mediafire.com/file/jm8n78t3fqd58sc/Kontonne_Lun.zip"
                                    class="btn btn-primary btn-lg" role="button" target="_blank">Mediafire</a>
@@ -86,17 +86,17 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">Last update: 05-11-2017</em>
+                            <em class="text-muted">最后更新: 05-11-2017</em>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <span class="text-center card-title">Japanese (Prior)</span>
+                            <span class="text-center card-title">日本语 (Prior)</span>
                         </div>
                         <div class="card-body">
-                            <em><h4 class="text-center">Testing</h4></em>
+                            <em><h4 class="text-center">测试中</h4></em>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-animated progress-bar-striped bg-success"
                                      role="progressbar" style="width:90%" aria-valuemax="100" aria-valuemin="0"
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">Last update: 10-11-2017</em>
+                            <em class="text-muted">最后更新: 10-11-2017</em>
                         </div>
                     </div>
                 </div>
@@ -113,10 +113,10 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <span class="text-center card-title">B-HM Cantonese</span>
+                            <span class="text-center card-title">B-HM 粤语</span>
                         </div>
                         <div class="card-body">
-                            <em><h4 class="text-center">Testing</h4></em>
+                            <em><h4 class="text-center">测试中</h4></em>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-animated progress-bar-striped bg-success"
                                      role="progressbar" style="width:85%" aria-valuemax="100" aria-valuemin="0"
@@ -124,17 +124,17 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">Last update: 10-11-2017</em>
+                            <em class="text-muted">最后更新: 10-11-2017</em>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <span class="text-center card-title">B-HM Putonghua</span>
+                            <span class="text-center card-title">B-HM 普通话</span>
                         </div>
                         <div class="card-body">
-                            <em><h4 class="text-center">Testing</h4></em>
+                            <em><h4 class="text-center">测试中</h4></em>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-animated progress-bar-striped bg-success"
                                      role="progressbar" style="width:85%" aria-valuemax="100" aria-valuemin="0"
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">Last update: 10-11-2017</em>
+                            <em class="text-muted">最后更新: 10-11-2017</em>
                         </div>
                     </div>
                 </div>
@@ -151,10 +151,10 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <span class="text-center card-title">RiskuCVVC Putonghua</span>
+                            <span class="text-center card-title">RiskuCVVC 普通话</span>
                         </div>
                         <div class="card-body">
-                            <em><h4 class="text-center">Recording</h4></em>
+                            <em><h4 class="text-center">录制中</h4></em>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-animated progress-bar-striped bg-warning"
                                      role="progressbar" style="width:20%" aria-valuemax="100" aria-valuemin="0"
@@ -162,17 +162,17 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">Last update: 10-11-2017</em>
+                            <em class="text-muted">最后更新: 10-11-2017</em>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <span class="text-center card-title">English</span>
+                            <span class="text-center card-title">英语</span>
                         </div>
                         <div class="card-body">
-                            <em><h4 class="text-center">Planning</h4></em>
+                            <em><h4 class="text-center">计划中</h4></em>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-animated progress-bar-striped bg-danger"
                                      role="progressbar" style="width:5%" aria-valuemax="100" aria-valuemin="0"
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <em class="text-muted">Last update: 10-11-2017</em>
+                            <em class="text-muted">最后更新: 10-11-2017</em>
                         </div>
                     </div>
                 </div>
